--- a/ChallengeAccepted.html
+++ b/ChallengeAccepted.html
@@ -17,6 +17,7 @@ p{
 line-height:6px;
 font-size:6px;
 background:url("image.jpeg");
+background-repeat: no-repeat;
 background-position:center;
 background-attachment:fixed;
 -webkit-background-clip: text;
